--- a/app/client/css/layout.css
+++ b/app/client/css/layout.css
@@ -19,7 +19,7 @@ body{min-height:100%;}
     z-index:-1;
     background-repeat:no-repeat;
     background-position:center center;
-    background-image:url(/public/images/bridge3.jpg);
+    background-image:url(/app/client/images/bridge3.jpg);
     -moz-background-size: cover;
     background-size: cover;                       
 }            
